@@ -146,6 +146,8 @@ public class GwtNet implements Net {
 
 		builder.setTimeoutMillis(httpRequest.getTimeOut());
 
+		builder.setIncludeCredentials(httpRequest.getIncludeCredentials());
+		
 		try {
 			Request request = builder.sendRequest(valueInBody ? value : null, new RequestCallback() {
 
